# json2daisy

./: MANIFEST.in  README.md  setup.cfg  test.sh  tox.ini
.github/workflows/: test.yml
src/json2daisy/: __init__.py  __main__.py  board_gen.py  hvcc_stuff.py  json2daisy.py
src/json2daisy/resources/: LICENSE  component_defaults.json  component_defaults_patchsm.json  component_defs.json  component_defs_patchsm.json  field.json  patch.json  patch_init.json  patch_sm.json  petal.json  pod.json
src/json2daisy/templates/: Makefile  daisy.h
tests/: README.md  gen_integration_tests.py  integration_test.py  test.sh  unit_test.py
tests/data/: expected_cpp.txt  expected_hpp.txt  expected_make.txt
tests/data/integration/: expected_field.h  expected_patch.h  expected_patch_init.h  expected_patch_sm.h  expected_petal.h  expected_petal_125b_sm.h  expected_pod.h
util/: gen_iotable.py
