[metadata]
name = json2daisy
version = 0.0.1
author = Electrosmith
author_email = info@electro-smith.com
description = A utility for generating Daisy board support files from JSON descriptions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/electro-smith/json2daisy
project_urls =
    Bug Tracker = https://github.com/electro-smith/json2daisy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src