[metadata]
name = json2daisy
version = 0.4.2
license = MIT
author = Electrosmith
author_email = shensley@electro-smith.com
description = A utility for generating Daisy board support files from JSON descriptions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/electro-smith/json2daisy
project_urls =
    Bug Tracker = https://github.com/electro-smith/json2daisy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
    Jinja2>=2.11
    importlib-resources; python_version<"3.9"
[options.packages.find]
where = src
